# rplaylist

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: audio.rs  config.rs  controls.rs  file.rs  lib.rs  main.rs  playlist.rs
test_data/: empty.playlist
