[package]
name = "music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.17.1", features = ["symphonia-all"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
