[package]
name = "rplaylist"
description = "Create and manage playlists of sound files."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive", "help"] }
rodio = { version = "0.17.1", features = ["symphonia-all"], default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.8.5"
