[package]
name = "rplaylist"
description = "Create and manage playlists of sound files."
version = "1.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true   # Enable link-time optimization
strip = true # Strip symbols from binary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive", "help"] }
rodio = { version = "0.17.1", features = ["symphonia-all"], default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.8.5"
crossterm = "0.26.1"
